<resources>
    <string name="app_name">Visario</string>

    <string name="facebook_app_id">471830241087582</string>
    <string name="fb_login_protocol_scheme">fb471830241087582</string>
    <string name="facebook_client_token">6283f85d2a2d55de600845ba9f08f52b</string>

    <string name="server_client_id">418259760145-kba451lmdgn5go77qva9p1d1j6n31l99.apps.googleusercontent.com</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="username_lowercase">username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name (optional)</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="date_of_birth_lowercase">date of birth</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_channels">Channels</string>
    <string name="title_chats">Chats</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>


    <string name="empty_field">Must not be empty</string>
    <string name="long_field">Must be a maximum of 100 characters</string>

    <string name="short_pass">Must be a minimum of 6 characters</string>
    <string name="at_least_one_char">Must be include at least 1 latin character</string>
    <string name="at_least_one_dig">Must be include at least 1 digit</string>
    <string name="at_least_one_special">Must be include at least 1 non-character symbol</string>

    <string name="password_not_confirmed">Password not confirmed</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_date">Invalid date</string>
    <string name="register_success">A link has been sent to your email address, click on it to finish your registration. Then you can login to the application.</string>
    <string name="confirm_email">Confirm email</string>
    <string name="ok">OK</string>
    <string name="log_out">Log out</string>
    <string name="create_new_channel">Create new channel</string>
    <string name="message">Message</string>
    <string name="unknown_error">Unknown error</string>
    <string name="send_failed">Send failed</string>
    <string name="search_contacts">Search contacts</string>

    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="last_seen">last seen %s</string>
    <string name="start_chatting">Start chatting</string>
    <string name="start_calling">Start calling</string>
    <string name="search">Search</string>
    <string name="add_contact">Add contact</string>
    <string name="start_video_call">Start video call</string>
    <string name="email_lowercase">email</string>
    <string name="phone">phone</string>
    <string name="open_contact_menu">Open contact menu</string>
    <string name="invite_to_channel">Invite to Channel</string>
    <string name="add_member">Add member</string>
    <string name="delete_contact">Delete contact</string>
    <string name="block_user">Block user</string>
    <string name="not_found">Not found</string>
    <string name="edit_contact">Edit contact</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_contact_confirm">Are you sure you want to delete this contact?</string>
    <string name="delete_message_confirm">Are you sure you want to delete this message?</string>
    <string name="save">Save</string>
    <string name="edit_name">Edit name</string>
    <string name="hint_last_name">Last name (optional)</string>
    <string name="hint_first_name">First name</string>
    <string name="done">Done</string>
    <string name="send_mail">Send mail</string>
    <string name="call_by_cell">Call by cell</string>
    <string name="info">Info</string>
    <string name="about_lowercase">about</string>
    <string name="about">About</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="edit_info">Edit info</string>
    <string name="phone_number">Phone number</string>
    <string name="privacy">Privacy</string>
    <string name="change_password">Change password</string>
    <string name="nobody">Nobody</string>
    <string name="my_contacts">My Contacts</string>
    <string name="everybody">Everybody</string>
    <string name="who_can_see_my_phone_number">Who can see my phone number?</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="change_email">Change email</string>
    <string name="who_can_see_my_email">Who can see my email?</string>
    <string name="who_can_see_my_birthdate">Who can see my Date of Birth?</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="settings">Settings</string>
    <string name="call">Call</string>
    <string name="user_image">User image</string>
    <string name="contact_photo">Contact\'s photo</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="gallery">Gallery</string>
    <string name="choose">Choose</string>
    <string name="select_image">Select image</string>
    <string name="permissions_denied">Permissions denied</string>
    <string name="allow">Allow</string>
    <string name="camera">Camera</string>
    <string name="crop_image">Crop image</string>
    <string name="new_channel">New Channel</string>
    <string name="channel_name">Channel name</string>
    <string name="description_optional">Description (optional)</string>
    <string name="description">Description</string>
    <string name="channel_privacy">Channel privacy</string>
    <string name="privacy_public">Public</string>
    <string name="privacy_private">Private</string>
    <string name="channel_privacy_desc">Private channels aren\'t discoverable by users outside the channel. Public channels are discoverable by anyone.</string>
    <string name="channel_mode">Channel mode</string>
    <string name="mode_restricted">Restricted</string>
    <string name="mode_unrestricted">Unrestricted</string>
    <string name="channel_mode_desc">Administrators, moderators, and channel members can add themselves and other members to unrestricted channels. Only administrators and moderators can add members to restricted channels.</string>
    <string name="leave_channel">Leave channel</string>
    <string name="upload_failed">Upload failed</string>
    <string name="select_contacts">Select contacts</string>
    <string name="invite">Invite</string>
    <string name="invited">Invited</string>
    <string name="invitation_failed">Invitation failed</string>
    <string name="leave">Leave</string>
    <string name="dialog_message_leave_channel">Are you sure you want to leave and remove the channel?</string>
    <string name="login_failed">Login failed</string>
    <string name="forgot_password_success">Password recovery instructions have been sent to your email</string>
    <string name="register_failed">Register failed</string>
    <string name="search_channel">Search channels</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="title_meet">Meet</string>
    <string name="create_new_meeting">Create new meeting</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="new_meeting">New meeting</string>
    <string name="meeting_name">Meeting name</string>
    <string name="join_the_meeting">Join the meeting</string>
    <string name="join">Join</string>
    <string name="meeting_url">Meeting URL</string>
    <string name="creation_failed">Creation failed</string>
    <string name="join_failed">Join failed</string>
    <string name="enabled_video">Enabled video</string>
    <string name="enabled_audio">Enabled audio</string>
    <string name="hang_up">Hang up</string>
    <string name="members_count">%1$d members</string>
    <string name="member_joined">%1$s joined</string>
    <string name="member_left">%1$s left</string>
    <string name="leave_meeting_confirm">Are you sure you want to leave the meeting?</string>
    <string name="schedule_meeting">Schedule a meeting</string>
    <string name="member_mic_enabled">Member mic enabled</string>
    <string name="no_messages">no messages</string>
    <string name="Meeting">Meeting</string>
    <string name="invite_group">Invite group</string>
    <string name="invite_contact">Invite contact</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="send_invitation">Send invitation</string>
    <string name="send">Send</string>
    <string name="sent">Sent</string>
    <string name="switch_camera">Switch camera</string>
    <string name="switch_audio_device">Switch audio device</string>
    <string name="edit">Edit</string>
    <string name="copy">Copy</string>
    <string name="edit_message">Edit message:</string>
    <string name="cancel_edit_mode">Cancel edit mode</string>
    <string name="edit_failed">Edit failed</string>
    <string name="copied">Copied</string>
    <string name="edited">Edited</string>
    <string name="resend">Resend</string>
    <string name="copy_link">Copy link</string>
    <string name="open_emojis">Open emojis</string>
    <string name="channel_image">Channel image</string>
    <string name="public_channel">Public channel</string>
    <string name="no_description">No description</string>
    <string name="private_channel">Private channel</string>
    <string name="members">Members</string>
    <string name="add_new_member">Add new member</string>
    <string name="attach_file">Attach file</string>
    <string name="media">Media</string>
    <string name="file">File</string>
    <string name="image">Image</string>
    <string name="attachment_with_dots">Attachment:</string>
    <string name="attachment">Attachment</string>
    <string name="choose_file">Choose a file</string>
    <string name="send_email">Send email...</string>
    <string name="attached_image">Attached image</string>
    <string name="downloading">Downloading...</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="fingerprint_app_login">Ask for a password each time the app is restarted</string>
    <string name="biometric_login">Biometric login</string>
    <string name="use_password">Use password</string>
    <string name="auth_error">Auth error: %s</string>
    <string name="auth_failed">Auth failed</string>
    <string name="auth_succeeded">Auth succeeded</string>
    <string name="fingerprint_button_description">Use fingerprint</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="generic_error">Failed. Please try later.</string>
    <string name="password_updated">Password updated</string>

    <plurals name="members">
        <item quantity="zero">%d member</item>
        <item quantity="one">%d member</item>
        <item quantity="few">%d members</item>
        <item quantity="other">%d members</item>
    </plurals>

    <plurals name="more_members">
        <item quantity="zero">+ %d more member</item>
        <item quantity="one">+ %d more member</item>
        <item quantity="few">+ %d more members</item>
        <item quantity="other">+ %d more members</item>
    </plurals>
</resources>