<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="pro.inmost.android.visario.ui.screens.channels.create.CreateChannelViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/new_channel"
            app:titleTextColor="?attr/colorOnPrimary"
            app:navigationIconTint="?attr/colorOnPrimary"
            app:navigationIcon="@drawable/ic_baseline_close_24">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_done_24"
                android:layout_marginEnd="8dp"
                android:padding="8dp"
                app:tint="@color/button_enabled_tint_selector"
                android:enabled="@{viewModel.name.length() > 0}"
                android:onClick="@{() -> viewModel.createChannel()}"
                android:layout_gravity="end"
                android:contentDescription="@string/create_new_channel" />

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:indeterminateOnly="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.showProgressBar ? View.VISIBLE : View.INVISIBLE}"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimary"
                    android:background="@android:color/transparent"
                    android:text="@={viewModel.name}"
                    android:hint="@string/channel_name">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                android:background="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent"
                    android:textColor="?android:attr/textColorPrimary"
                    android:text="@={viewModel.description}"
                    android:hint="@string/description"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textSize="16sp"
                        android:textColor="?attr/colorSecondaryVariant"
                        android:textStyle="bold"
                        android:text="@string/channel_privacy"/>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/radio_button_public"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layoutDirection="rtl"
                            android:checked="@={viewModel.public}"
                            android:textSize="@dimen/radio_group_text_size"
                            android:text="@string/privacy_public"/>

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/radio_button_private"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layoutDirection="rtl"
                            android:checked="@={!viewModel.public}"
                            android:textSize="@dimen/radio_group_text_size"
                            android:text="@string/privacy_private"/>
                    </RadioGroup>


                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textColor="?android:attr/textColorSecondary"
                        android:text="@string/channel_privacy_desc"/>


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="@{viewModel.public ? View.GONE : View.VISIBLE}"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textSize="16sp"
                        android:textColor="?attr/colorSecondaryVariant"
                        android:textStyle="bold"
                        android:text="@string/channel_mode"/>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/radio_button_restricted"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layoutDirection="rtl"
                            android:checked="@={viewModel.restricted}"
                            android:textSize="@dimen/radio_group_text_size"
                            android:text="@string/mode_restricted"/>

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/radio_button_unrestricted"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layoutDirection="rtl"
                            android:checked="@={!viewModel.restricted}"
                            android:textSize="@dimen/radio_group_text_size"
                            android:text="@string/mode_unrestricted"/>
                    </RadioGroup>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textColor="?android:attr/textColorSecondary"
                        android:text="@string/channel_mode_desc"/>



                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

</layout>