<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="pro.inmost.android.visario.ui.screens.account.security.privacy.phonenumber.PhoneNumberSetupViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSurface"
            android:elevation="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIconTint="?attr/colorOnSurface"
                app:title="@string/phone_number"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"/>


        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textSize="16sp"
                    android:textColor="?attr/colorSecondary"
                    android:textStyle="bold"
                    android:text="@string/who_can_see_my_phone_number"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:textSize="@dimen/radio_group_text_size"
                        android:text="@string/everybody"/>
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:textSize="@dimen/radio_group_text_size"
                        android:text="@string/my_contacts"/>

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:textSize="@dimen/radio_group_text_size"
                        android:text="@string/nobody"/>
                </RadioGroup>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            android:layout_marginTop="@dimen/margin_between_setting_cards">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="22dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_change_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_chat_name"
                    android:drawablePadding="16dp"
                    app:drawableTint="?attr/colorOnSurface"
                    app:drawableEndCompat="@drawable/ic_arrow_right_24"
                    app:drawableStartCompat="@drawable/ic_baseline_smartphone_24"
                    android:textColor="?android:attr/textColorPrimary"
                    android:text="@string/change_phone_number"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>


</layout>