<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="pro.inmost.android.visario.ui.entities.profile.AllowedProfileViewers"/>
        <variable
            name="viewModel"
            type="pro.inmost.android.visario.ui.screens.account.settings.privacy.birthdate.BirthdateSetupViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/date_of_birth"
                android:backgroundTint="?attr/colorSurface"
                app:titleTextColor="?attr/colorOnPrimary"
                app:navigationIconTint="?attr/colorOnPrimary"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textSize="16sp"
                    android:textColor="?attr/colorSecondaryVariant"
                    android:textStyle="bold"
                    android:text="@string/who_can_see_my_birthdate"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:onCheckedChanged="@{viewModel.onViewersChanged}"
                    android:layout_marginStart="8dp">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_button_everybody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:checked="@{viewModel.profile.showBirthdateTo == AllowedProfileViewers.EVERYONE}"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="@dimen/radio_group_text_size"
                        android:text="@string/everybody"/>
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_button_contacts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:textColor="?android:attr/textColorPrimary"
                        android:checked="@{viewModel.profile.showBirthdateTo == AllowedProfileViewers.CONTACTS}"
                        android:textSize="@dimen/radio_group_text_size"
                        android:text="@string/my_contacts"/>

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_button_nobody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.profile.showBirthdateTo == AllowedProfileViewers.NO_ONE}"
                        android:layoutDirection="rtl"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="@dimen/radio_group_text_size"
                        android:text="@string/nobody"/>
                </RadioGroup>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>


</layout>